--- a/app/views/admins/customers/show.html.erb
+++ b/app/views/admins/customers/show.html.erb
@@ -3,7 +3,7 @@
 	<div class = "row my-5">
 		<div class = "offset-md-1">
 
-			<h3><span class = "px-4 bg-light"><%= @full_name %>さんの会員詳細></span></h3>
+			<h3><span class = "px-4 bg-light"><%= @full_name %>さんの会員詳細</span></h3>
 
 		</div>
 	</div>
