--- a/app/views/admins/items/edit.html.erb
+++ b/app/views/admins/items/edit.html.erb
@@ -42,7 +42,7 @@
 						<%= f.label :商品説明 %>
 					</div>
 					<div class = "col-md-9">
-						<%= f.text_area :introduction, class: "w-75 py-4" %>
+						<%= f.text_area :introduction, class: "w-75", :style => "height:100px;" %>
 					</div>
 				</div>
 
